[package]
name = "dolphinx"
version = "2.1.3"

edition = "2024"

[dependencies]
reqwest = "0.13.2"
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.8"
colored = "2"
chrono = "0.4.43"
futures = "0.3"
regex = "1.12.3"
pnet = "0.35.0"
# Cargo.toml

serde = { version = "1", features = ["derive"] }
serde_json = "1" # if you serialize to JSON


